# parallel-K-core-decompostion-on-FPGA

./: CMakeLists.txt  configure.h.in  constraintAndDesign.docx  main.cpp  ~$nstraintAndDesign.docx  ~WRL1112.tmp
dataset/: test.nve
include/: graph.h  graphProcessFuncs.h
output/: amazon0601_Offset.txt  amazon0601_Vertex.txt  test_Vertex.txt  web-Google_Offset.txt  wiki-Talk_Offset.txt
processedGraph/: amazon0601_Adjs_0.txt  amazon0601_Adjs_1.txt  amazon0601_Adjs_10.txt  amazon0601_Adjs_11.txt  amazon0601_Adjs_12.txt  amazon0601_Adjs_13.txt  amazon0601_Adjs_14.txt  amazon0601_Adjs_15.txt  amazon0601_Adjs_2.txt  amazon0601_Adjs_3.txt  amazon0601_Adjs_4.txt  amazon0601_Adjs_5.txt  amazon0601_Adjs_6.txt  amazon0601_Adjs_7.txt  amazon0601_Adjs_8.txt  amazon0601_Adjs_9.txt  amazon0601_Degrees.txt  amazon0601_Degrees_0.txt  amazon0601_Degrees_1.txt  amazon0601_Degrees_10.txt  amazon0601_Degrees_11.txt  amazon0601_Degrees_12.txt  amazon0601_Degrees_13.txt  amazon0601_Degrees_14.txt  amazon0601_Degrees_15.txt  amazon0601_Degrees_2.txt  amazon0601_Degrees_3.txt  amazon0601_Degrees_4.txt  amazon0601_Degrees_5.txt  amazon0601_Degrees_6.txt  amazon0601_Degrees_7.txt  amazon0601_Degrees_8.txt  amazon0601_Degrees_9.txt  amazon0601_KeyInfo.txt  amazon0601_Offset.txt  amazon0601_Offset_0.txt  amazon0601_Offset_1.txt  amazon0601_Offset_10.txt  amazon0601_Offset_11.txt  amazon0601_Offset_12.txt  (+124 more)
src/fileOperations/: CmakeLists.txt  fileOperations.cpp
src/graph/: CMakeLists.txt  PKC.cpp  graph.cpp  graph.h
src/graphProcessFunc/: CMakeLists.txt  graphProcessFunc_test.cpp
src/graphProcessFuncs/: CMakeLists.txt  graphProcessFunc_NVE.cpp  graphProcessFuncs.h
src/include/: fileOperations.h  graph.h  graphProcessFunc.h
src/parallelRWFile/: CmakeLists.txt  parallelRWFile.cpp  parallelRWFile.h
src/threadPool/: CMakeLists.txt  threadPool.cpp  threadPool.h
